5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1764_762.log
== TEST (2019-05-25 09:34:02) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

data=input("Data: ")

data[2:5]=int
print(data[2:5])
dia=data[:2]
ano=data[4:]



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 09:34:03) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

data=input("Data: ")

data[2:5]=int
print(data[2:5])
dia=data[:2]
ano=data[4:]



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 09:39:14) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

data=input("Data: ")

int(data[2:5])
print(data[2:5])
print(data[2:5])
dia=data[:2]
ano=data[4:]



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 09:39:39) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

data=input("Data: ")

int(data[2:4])
print(data[2:4])
print(data[2:5])
dia=data[:2]
ano=data[4:]



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 09:39:53) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

data=input("Data: ")

int(data[2:4])
print(data[2:4])
print(data[2:5])
dia=data[:2]
ano=data[4:]



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 12:18:09) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

data=input("Data: ")

int(data[2:4])




-- EXECUTION TIME:
0.324118
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:

-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:

-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:55:46) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

data=input("Data: ")

b=int(data[2:4])

if(b==1):
	mes=vet_mes[0]
elif(b==2):
	mes=met_mes[1]
elif(b==3):
	mes=met_mes[2]
elif(b==4):
	mes=met_mes[3]
elif(b==5):
	mes=met_mes[4]
elif(b==6):
	mes=met_mes[5]
elif(b==7):
	mes=met_mes[6]
elif(b==8):
	mes=met_mes[7]
elif(b==9):
	mes=met_mes[8]
elif(b==10):
	mes=met_mes[9]
elif(b==11):
	mes=met_mes[10]
elif(b==12):
	mes=met_mes[11]
	
print([data[0:2],' de ', mes, ' de ', data[5:9])

-- ERROR:
File "XXXX", line 34
    print([data[0:2],' de ', mes, ' de ', data[5:9])
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:55:59) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

data=input("Data: ")

b=int(data[2:4])

if(b==1):
	mes=vet_mes[0]
elif(b==2):
	mes=met_mes[1]
elif(b==3):
	mes=met_mes[2]
elif(b==4):
	mes=met_mes[3]
elif(b==5):
	mes=met_mes[4]
elif(b==6):
	mes=met_mes[5]
elif(b==7):
	mes=met_mes[6]
elif(b==8):
	mes=met_mes[7]
elif(b==9):
	mes=met_mes[8]
elif(b==10):
	mes=met_mes[9]
elif(b==11):
	mes=met_mes[10]
elif(b==12):
	mes=met_mes[11]
	
print(data[0:2],' de ', mes, ' de ', data[5:9])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:55:59) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

data=input("Data: ")

b=int(data[2:4])

if(b==1):
	mes=vet_mes[0]
elif(b==2):
	mes=met_mes[1]
elif(b==3):
	mes=met_mes[2]
elif(b==4):
	mes=met_mes[3]
elif(b==5):
	mes=met_mes[4]
elif(b==6):
	mes=met_mes[5]
elif(b==7):
	mes=met_mes[6]
elif(b==8):
	mes=met_mes[7]
elif(b==9):
	mes=met_mes[8]
elif(b==10):
	mes=met_mes[9]
elif(b==11):
	mes=met_mes[10]
elif(b==12):
	mes=met_mes[11]
	
print(data[0:2],' de ', mes, ' de ', data[5:9])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:56:28) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

data=input("Data: ")

b=int(data[2:4])

if(b==1):
	mes=vet_mes[0]
elif(b==2):
	mes=met_mes[1]
elif(b==3):
	mes=met_mes[2]
elif(b==4):
	mes=met_mes[3]
elif(b==5):
	mes=met_mes[4]
elif(b==6):
	mes=met_mes[5]
elif(b==7):
	mes=met_mes[6]
elif(b==8):
	mes=met_mes[7]
elif(b==9):
	mes=met_mes[8]
elif(b==10):
	mes=met_mes[9]
elif(b==11):
	mes=met_mes[10]
elif(b==12):
	mes=met_mes[11]
	
print(data[0:2],' de ', mes, ' de ', data[4:9])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:56:40) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

data=input("Data: ")

b=int(data[2:4])

if(b==1):
	mes=vet_mes[0]
elif(b==2):
	mes=met_mes[1]
elif(b==3):
	mes=met_mes[2]
elif(b==4):
	mes=met_mes[3]
elif(b==5):
	mes=met_mes[4]
elif(b==6):
	mes=met_mes[5]
elif(b==7):
	mes=met_mes[6]
elif(b==8):
	mes=met_mes[7]
elif(b==9):
	mes=met_mes[8]
elif(b==10):
	mes=met_mes[9]
elif(b==11):
	mes=met_mes[10]
elif(b==12):
	mes=met_mes[11]
	
print(data[0:2],' de ', mes, ' de ', data[4:9])

-- EXECUTION TIME:
0.349732
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/762/main.py", line 30, in <module>
    mes=met_mes[10]
NameError: name 'met_mes' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:56:51) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

data=input("Data: ")

b=int(data[2:4])

if(b==1):
	mes=vet_mes[0]
elif(b==2):
	mes=met_mes[1]
elif(b==3):
	mes=met_mes[2]
elif(b==4):
	mes=met_mes[3]
elif(b==5):
	mes=met_mes[4]
elif(b==6):
	mes=met_mes[5]
elif(b==7):
	mes=met_mes[6]
elif(b==8):
	mes=met_mes[7]
elif(b==9):
	mes=met_mes[8]
elif(b==10):
	mes=met_mes[9]
elif(b==11):
	mes=met_mes[10]
elif(b==12):
	mes=met_mes[11]
	
print(data[0:2],' de ', mes, ' de ', data[4:9])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:57:46) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

data=input("Data: ")

b=int(data[2:4])

if(b==1):
	mes=vet_mes[0]
elif(b==2):
	mes=vet_mes[1]
elif(b==3):
	mes=vet_mes[2]
elif(b==4):
	mes=vet_mes[3]
elif(b==5):
	mes=vet_mes[4]
elif(b==6):
	mes=vet_mes[5]
elif(b==7):
	mes=vet_mes[6]
elif(b==8):
	mes=vet_mes[7]
elif(b==9):
	mes=vet_mes[8]
elif(b==10):
	mes=vet_mes[9]
elif(b==11):
	mes=vet_mes[10]
elif(b==12):
	mes=vet_mes[11]
	
print(data[0:2],' de ', mes, ' de ', data[4:9])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:57:54) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

data=input("Data: ")

b=int(data[2:4])

if(b==1):
	mes=vet_mes[0]
elif(b==2):
	mes=vet_mes[1]
elif(b==3):
	mes=vet_mes[2]
elif(b==4):
	mes=vet_mes[3]
elif(b==5):
	mes=vet_mes[4]
elif(b==6):
	mes=vet_mes[5]
elif(b==7):
	mes=vet_mes[6]
elif(b==8):
	mes=vet_mes[7]
elif(b==9):
	mes=vet_mes[8]
elif(b==10):
	mes=vet_mes[9]
elif(b==11):
	mes=vet_mes[10]
elif(b==12):
	mes=vet_mes[11]
	
print(data[0:2],' de ', mes, ' de ', data[4:9])

-- EXECUTION TIME:
0.432654
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26  de  novembro  de  1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07  de  julho  de  1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22  de  agosto  de  2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
